--- a/src/app/main-page/tasks/add-task/add-task.component.html
+++ b/src/app/main-page/tasks/add-task/add-task.component.html
@@ -70,7 +70,7 @@
       </div>
 
       <div class="button-group">
-        <button type="submit" [disabled]="taskForm.invalid">Add Task</button>
+        <button type="submit" [disabled]="taskForm.invalid">Save</button>
         <button type="button" class="close-modal-btn" (click)="closeModal()">
           Close
         </button>
