[fix] Agents are now signal completely

--- a/src/app/kickoff/kickoff.component.html
+++ b/src/app/kickoff/kickoff.component.html
@@ -1,3 +1,4 @@
+<button class="go-back-btn" (click)="goBack()">Go Back</button>
 @if(canLoadTemplate){
 <div>
   <!-- The content you want to display when all conditions are met -->
