--- a/src/app/main-page/agents/create-agent/create-agent.component.html
+++ b/src/app/main-page/agents/create-agent/create-agent.component.html
@@ -79,8 +79,8 @@
     </div>
 
     <div class="button-group">
-      <button type="button" class="back-btn" (click)="goBack()">
-        <i class="fas fa-arrow-left"></i> Back
+      <button type="button" class="back-btn" (click)="onClose()">
+        <i class="fas fa-arrow-left"></i> Close
       </button>
 
       <button
