[fix] Tasks are now signals

--- a/src/app/main-page/tasks/task-table/task-table.component.html
+++ b/src/app/main-page/tasks/task-table/task-table.component.html
@@ -1,5 +1,5 @@
 <div class="tasks-table-container">
-  @if(tempTasks.length > 0){
+  @if(tableTasks.length > 0){
   <table class="tasks-table">
     <thead>
       <tr>
@@ -12,7 +12,7 @@
       </tr>
     </thead>
     <tbody>
-      @for(task of tempTasks; track task.id){
+      @for(task of tableTasks; track task.id){
       <tr>
         <td>{{ task.id }}</td>
         <td>
@@ -42,7 +42,7 @@
       }
     </tbody>
   </table>
-  } @if(tempTasks.length === 0){
+  } @if(tableTasks.length === 0){
   <div>
     <p>No tasks available.</p>
   </div>
@@ -59,11 +59,19 @@
 </div>
 
 <div class="buttons-container">
-  <button class="add-task-btn" (click)="navigateToAddTask()">Add Task</button>
+  <button class="add-task-btn" (click)="openAddTaskModal()">Add Task</button>
 
   <div>
     <button class="add-task-btn" (click)="reloadTasks()">Reload Tasks</button>
     <button class="save-task-btn" (click)="saveTasks()">Update Tasks</button>
   </div>
 </div>
-<router-outlet></router-outlet>
+@if(showModal()){
+
+<app-add-task
+  [crewId]="crewId()!"
+  [agents]="agents"
+  (onTaskCreate)="onTaskCreated($event)"
+  (onCloseModal)="closeAddTaskModal()"
+></app-add-task>
+}
