[fix] modals outputs fixed

--- a/src/app/main-page/tables/table-agents/table-agents.component.html
+++ b/src/app/main-page/tables/table-agents/table-agents.component.html
@@ -87,7 +87,7 @@
 } @if(showModal()){
 <app-create-agent
   [crewId]="crewId()!"
-  (onAgentCreate)="onAgentCreated($event)"
+  (onAgentCreate)="onAgentCreated()"
   (onCloseModal)="closeCreateAgentModal()"
 ></app-create-agent>
 }
