--- a/src/app/main-page/tables/task-table/task-table.component.html
+++ b/src/app/main-page/tables/task-table/task-table.component.html
@@ -71,7 +71,7 @@
 <app-add-task
   [crewId]="crewId()!"
   [agents]="agents"
-  (onTaskCreate)="onTaskCreated($event)"
+  (onTaskCreate)="onTaskCreated()"
   (onCloseModal)="closeAddTaskModal()"
 ></app-add-task>
 }
